# Voxelartcraft

./: .gitignore  LICENSE  README.md  blockProperties.json  blockPropertiesOld.json  blocks.txt  impressum.html  index.html  magick.js  package-lock.json  package.json  preprocessor.py  pyproject.toml  server.js  style.css  test.html  test.js  test.nbt  tets.css
blocks/: ids.txt
keyframes/: badApple.json
shaders/: discretize.glsl  fragment.glsl  processing.glsl  vertex.glsl  voxel.glsl
src/: animator.js  batchMode.js  blockPalette.js  dither.js  fragment.glsl  gui.js  imageProcessor.js  keyframe.js  main.py  nbt.js  renderer.py  schematic.js  schematic.py  script.js  stats.py
style/: sliders.css  style.css  tooltip.css
