[tool.poetry]
name = "perspectiveart"
version = "0.1.0"
description = ""
authors = ["B3tah3 <louis@hswl-glaenzer.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
opencv-python = "^4.8.1.78"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
